--- a/index.html
+++ b/index.html
@@ -19,15 +19,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: radial-gradient(ellipse at center, rgba(0,255,0,0.05), transparent), url('https://i.gifer.com/7efs.gif') center center no-repeat;
+      background: url('https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif') center center no-repeat;
       background-size: cover;
-      opacity: 0.1;
-      animation: spin 60s linear infinite;
+      opacity: 0.15;
       z-index: 0;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
     }
     .content {
       position: relative;
@@ -54,6 +49,13 @@
       width: 300px;
       border-radius: 10px;
     }
+    .instagram-box img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 2px solid #00ff00;
+      margin-bottom: 10px;
+    }
     .instagram-box h3 {
       margin: 0;
       font-size: 16px;
@@ -76,25 +78,32 @@
 </head>
 <body>
 
-<!-- Background Globe -->
+<!-- Background cyber bergerak -->
 <div id="globe"></div>
 
-<!-- Audio Musik -->
+<!-- Musik glitch -->
 <audio autoplay loop hidden>
-  <source src="https://files.catbox.moe/3g6z8q.mp3" type="audio/mpeg">
+  <source src="https://files.catbox.moe/9geybw.mp3" type="audio/mpeg">
 </audio>
 
-<!-- Konten Utama -->
+<!-- Konten utama -->
 <div class="content">
+  <!-- Gambar hacker -->
   <img src="https://storage.googleapis.com/storage-ajaib-prd-coin-wp-artifact/2025/01/anonymous-1024x576.webp" class="hacker-img" alt="Hacker Image">
+  
+  <!-- Status -->
   <div class="injection">Full Injection Successfully</div>
 
+  <!-- Instagram Box -->
   <div class="instagram-box">
-    <h3>Preview Data: <strong>@Futur_ana30</strong></h3>
+    <!-- Foto profil -->
+    <img src="https://i.imgur.com/7NFS9j0_d.webp?maxwidth=760&fidelity=grand" alt="Profile Picture">
+    <h3>Preview Data: <strong>@future_ana30</strong></h3>
     <p>Status: <span style="color:lime">Active</span></p>
     <p>Data logs received</p>
   </div>
 
+  <!-- Waktu -->
   <div class="time-box" id="timeBox">
     Loading time...
   </div>
@@ -105,7 +114,7 @@
   by Vicyfkr
 </div>
 
-<!-- Waktu JavaScript -->
+<!-- Script waktu -->
 <script>
   function updateTime() {
     const now = new Date();
