--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <!-- Background Video -->
 <video id="bg-video" autoplay loop muted>
-  <source src="video.mp4" type="video/mp4">
+  <source src="pinterestdownloader.com-1752431533.735801.mp4" type="video/mp4">
 </video>
 
 <!-- Suara Tertawa (opsional) -->
