--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
       font-family: 'Courier New', monospace;
     }
 
-    video#bg-video {
+    /* Background GIF */
+    .background {
       position: fixed;
       top: 0;
       left: 0;
       width: 100vw;
       height: 100vh;
-      object-fit: cover;
+      background: url('background.gif') no-repeat center center;
+      background-size: cover;
       z-index: -1;
     }
 
+    /* Kontainer untuk error */
     #errors-container {
       position: absolute;
       top: 0;
@@ -46,20 +49,19 @@
 </head>
 <body>
 
-<!-- Background Video -->
-<video id="bg-video" autoplay loop muted>
-  <source src="pinterestdownloader.com-1752431533.735801.mp4" type="video/mp4">
-</video>
+<!-- Background GIF -->
+<div class="background"></div>
 
 <!-- Suara Tertawa -->
 <audio autoplay loop>
   <source src="https://www.myinstants.com/media/sounds/creepy-laugh.mp3" type="audio/mpeg">
 </audio>
 
-<!-- Kontainer Teks Error -->
+<!-- Error Text -->
 <div id="errors-container"></div>
 
 <script>
+  // Munculkan error berkedip terus
   setInterval(() => {
     const err = document.createElement("div");
     err.className = "error-text";
@@ -69,6 +71,7 @@
     document.getElementById("errors-container").appendChild(err);
   }, 200);
 
+  // Simulasi buka tab palsu
   setTimeout(() => {
     for (let i = 0; i < 3; i++) {
       window.open("https://example.com", "_blank");
