--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: url('background.gif') no-repeat center center;
+      background: url('pinterestdownloader.com-1752431533.735801.gif') no-repeat center center;
       background-size: cover;
       z-index: -1;
     }
